tests/diagnostic_golden/codegen_dynamic_concat.diag
tests/diagnostic_golden/codegen_dynamic_concat.f:4:16: error[CF3119]: invalid operand type for expression operator
help: see docs/errors.md#CF3119
      C = A // I
               ^
